@@ -1,14 +1,12 @@
 package com.ohhoonim.demo_security_filter_chain.jwt;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-import org.springframework.util.StringUtils;
+import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import jakarta.servlet.FilterChain;
@@ -16,40 +14,27 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
+@Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
             throws ServletException, IOException {
-        String token = extractToken(request);
-
-        if (token != null) {
-            try {
-                var claims = JwtUtil.validateToken(token);
-                String username = claims.getSubject();
-
-                // 인증 객체 생성
-                var authentication = new UsernamePasswordAuthenticationToken(
-                        new User(username, "", Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))),
-                        null,
-                        Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
-                );
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            } catch (Exception e) {
-                // 토큰 검증 실패
-                SecurityContextHolder.clearContext();
-            }
-        }
+        // List<? extends GrantedAuthority> authorities = List.of(
+        //     () -> "ROLE_USER"
+        // );
+        var authentication = new BearerAuthenticationToken(null);
+        authentication.setAuthenticated(true);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
 
         chain.doFilter(request, response);
     }
 
-    private String extractToken(HttpServletRequest request) {
-        String bearerToken = request.getHeader("Authorization");
-        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
-            return bearerToken.substring(7);
-        }
-        return null;
-    }
+    // private String extractToken(HttpServletRequest request) {
+    //     String bearerToken = request.getHeader("Authorization");
+    //     if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
+    //         return bearerToken.substring(7);
+    //     }
+    //     return null;
+    // }
 }
